--- a/Data_Evaluation/IAD_Clean_DataFrames.ipynb
+++ b/Data_Evaluation/IAD_Clean_DataFrames.ipynb
@@ -2718,17 +2718,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Subgroup</th>\n",
+       "      <th>Female</th>\n",
+       "      <th>Male</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>End Period</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-18</th>\n",
+       "      <td>45.4</td>\n",
+       "      <td>36.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-05</th>\n",
+       "      <td>40.7</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-12</th>\n",
+       "      <td>37.2</td>\n",
+       "      <td>31.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-19</th>\n",
+       "      <td>37.6</td>\n",
+       "      <td>29.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-26</th>\n",
+       "      <td>38.1</td>\n",
+       "      <td>30.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-02</th>\n",
+       "      <td>39.6</td>\n",
+       "      <td>31.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-09</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>31.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-16</th>\n",
+       "      <td>39.1</td>\n",
+       "      <td>32.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-23</th>\n",
+       "      <td>39.6</td>\n",
+       "      <td>32.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-30</th>\n",
+       "      <td>41.5</td>\n",
+       "      <td>33.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-07</th>\n",
+       "      <td>41.3</td>\n",
+       "      <td>36.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-14</th>\n",
+       "      <td>44.2</td>\n",
+       "      <td>36.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-07-21</th>\n",
+       "      <td>44.6</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-08-31</th>\n",
+       "      <td>40.7</td>\n",
+       "      <td>31.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-14</th>\n",
+       "      <td>39.9</td>\n",
+       "      <td>32.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-28</th>\n",
+       "      <td>41.4</td>\n",
+       "      <td>32.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-12</th>\n",
+       "      <td>41.6</td>\n",
+       "      <td>33.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-10-26</th>\n",
+       "      <td>42.4</td>\n",
+       "      <td>32.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-09</th>\n",
+       "      <td>46.2</td>\n",
+       "      <td>36.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-11-23</th>\n",
+       "      <td>47.6</td>\n",
+       "      <td>37.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-07</th>\n",
+       "      <td>45.7</td>\n",
+       "      <td>36.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-21</th>\n",
+       "      <td>46.5</td>\n",
+       "      <td>37.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Subgroup    Female  Male\n",
+       "End Period              \n",
+       "2020-01-18    45.4  36.4\n",
+       "2020-05-05    40.7  31.0\n",
+       "2020-05-12    37.2  31.4\n",
+       "2020-05-19    37.6  29.9\n",
+       "2020-05-26    38.1  30.3\n",
+       "2020-06-02    39.6  31.1\n",
+       "2020-06-09    40.0  31.9\n",
+       "2020-06-16    39.1  32.7\n",
+       "2020-06-23    39.6  32.4\n",
+       "2020-06-30    41.5  33.8\n",
+       "2020-07-07    41.3  36.5\n",
+       "2020-07-14    44.2  36.1\n",
+       "2020-07-21    44.6  37.0\n",
+       "2020-08-31    40.7  31.8\n",
+       "2020-09-14    39.9  32.1\n",
+       "2020-09-28    41.4  32.7\n",
+       "2020-10-12    41.6  33.1\n",
+       "2020-10-26    42.4  32.9\n",
+       "2020-11-09    46.2  36.1\n",
+       "2020-11-23    47.6  37.2\n",
+       "2020-12-07    45.7  36.8\n",
+       "2020-12-21    46.5  37.9"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IAD_gender_df.pivot(index=\"End Period\", columns=\"Subgroup\", values=\"Value\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-2f9eca6fee6a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpivot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'foo'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'bar'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'baz'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# df.pivot(index='foo', columns='bar', values='baz')"
+   ]
   }
  ],
  "metadata": {
