--- a/Data_Evaluation/IAD_Clean_DataFrames.ipynb
+++ b/Data_Evaluation/IAD_Clean_DataFrames.ipynb
@@ -5188,10 +5188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output_data_file = \"output_data/AID_processed_data.csv\"\n",
+    "AID_merged_df.to_csv(output_data_file)"
+   ]
   }
  ],
  "metadata": {
