--- a/Data_Evaluation/Depression and Anxiety Potential Factors Analysis.ipynb
+++ b/Data_Evaluation/Depression and Anxiety Potential Factors Analysis.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -830,7 +832,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -853,7 +857,7 @@
     "plt.title('Health-Related Impacts on Post-Secondary Education')\n",
     "plt.ylabel('Participant Total (millions)')\n",
     "plt.xticks(rotation=50)\n",
-    "plt.savefig(\"figure.png\")\n"
+    "plt.savefig(\"health1.png\")"
    ]
   },
   {
@@ -933,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +961,7 @@
     "plt.title('COVID Educational Effects on Post-Secondary Education')\n",
     "plt.ylabel('Participant Total (millions)')\n",
     "plt.xticks(rotation=50)\n",
-    "plt.savefig(\"figure.png\")"
+    "plt.savefig(\"educ.png\")"
    ]
   },
   {
@@ -2389,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2417,7 @@
     "plt.title('COVID Effects on Housing Affordability ')\n",
     "plt.ylabel('Americans unable to afford housing (millions)')\n",
     "# plt.xlabel(\"Participant's Age Group\")\n",
-    "plt.savefig(\"figure.png\")"
+    "plt.savefig(\"housing_age.png\")"
    ]
   },
   {
@@ -2488,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -2514,7 +2518,7 @@
     "plt.title('COVID Effects on Housing Affordability ')\n",
     "plt.ylabel('Americans unable to afford housing (millions)')\n",
     "# plt.xlabel('Participants Gender Breakdown')\n",
-    "plt.savefig(\"figure.png\")"
+    "plt.savefig(\"housing_gender.png\")"
    ]
   },
   {
@@ -3122,7 +3126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3146,7 +3150,7 @@
     "plt.title('Detrimental Financial Effects of COVID')\n",
     "plt.ylabel('Participant Total (millions)')\n",
     "# plt.xlabel('Age Breakdown')\n",
-    "plt.savefig(\"figure.png\")"
+    "plt.savefig(\"fin_age.png\")"
    ]
   },
   {
@@ -3219,7 +3223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3242,7 +3246,7 @@
     "plt.bar(ge_x,ge_y)\n",
     "plt.title('Detrimental Financial Effects of COVID')\n",
     "plt.ylabel('Participant Total (millions)')\n",
-    "plt.savefig(\"figure.png\")"
+    "plt.savefig(\"fin_gender.png\")"
    ]
   },
   {
@@ -4443,7 +4447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -4467,7 +4471,7 @@
     "plt.title('COVID Effects on Expenses Affordability')\n",
     "plt.ylabel('Participant Total (millions)')\n",
     "# plt.xlabel(\"Participant's Age Group\")\n",
-    "plt.savefig(\"figure.png\")"
+    "plt.savefig(\"exp_age.png\")"
    ]
   },
   {
@@ -4540,7 +4544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -4563,7 +4567,7 @@
     "plt.bar(gs_x,gs_y)\n",
     "plt.title('COVID Effects on Expenses Affordability')\n",
     "plt.ylabel('Participant Total (millions)')\n",
-    "plt.savefig(\"figure.png\")"
+    "plt.savefig(\"exp_gender.png\")"
    ]
   },
   {
