--- a/Data_Evaluation/Depression and Anxiety Potential Factors Analysis.ipynb
+++ b/Data_Evaluation/Depression and Anxiety Potential Factors Analysis.ipynb
@@ -859,6 +859,7 @@
     }
    ],
    "source": [
+    "# Creating Variables for the dataframe\n",
     "o_v=last_wk_clean.iloc[1][1]\n",
     "t_v=last_wk_clean.iloc[2][1]\n",
     "th_v=last_wk_clean.iloc[3][1]\n",
@@ -870,6 +871,7 @@
     "ni_v=last_wk_clean.iloc[9][1]\n",
     "te_v=last_wk_clean.iloc[10][1]\n",
     "\n",
+    "# Creating a dataframe that will be easier to graph than original (original dataframe had alot of index issues)\n",
     "edi1_df=pd.DataFrame({\"Select Characteristics\":[\"Had coronavirus or had concerns about Contracting coronavirus\",\n",
     "    \"Caring for someone with coronavirus\",\n",
     "    \"Caring for others whose care arrangements are disrupted\",\n",
@@ -906,6 +908,7 @@
     }
    ],
    "source": [
+    "# creating a bar graph of the clean dataframe\n",
     "sc1_v=edi1_df['Select Characteristics']\n",
     "tnp1_v=edi1_df['Number of Students']/1000000\n",
     "plt.barh(sc1_v,tnp1_v)\n",
@@ -1007,6 +1010,7 @@
     }
    ],
    "source": [
+    "# creating the variables for the dataframe\n",
     "one_v=last_wk_clean.loc[1][2]\n",
     "two_v=last_wk_clean.loc[1][3]\n",
     "three_v=last_wk_clean.loc[1][4]\n",
@@ -1016,6 +1020,7 @@
     "seven_v=last_wk_clean.loc[1][8]\n",
     "eight_v=last_wk_clean.loc[1][9]\n",
     "\n",
+    "# Creating a dataframe that will be easier to graph than original (original dataframe had alot of index issues)\n",
     "edi_df=pd.DataFrame({\"Select Characteristics\":[\"Plans to take classes this fall have not changed\",\n",
     "    \"All plans to take classes this fall have been canceled\",\n",
     "    \"Classes will be in different formats in the fall\",\n",
@@ -1050,6 +1055,7 @@
     }
    ],
    "source": [
+    "# Creating a bar chart on the second clean dataframe\n",
     "sc_v=edi_df['Select Characteristics']\n",
     "tnp_v=edi_df['Total Number of Students']/1000000\n",
     "plt.barh(sc_v,tnp_v)\n",
